[package]
name = "my-vulkan"
version = "0.1.0"
authors = ["Garfield <Garfield.bupt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
vulkano-shaders = "0.19.0"
vulkano-win = "0.19.0"
winit = "0.22.2"
cgmath = "0.17.0"